# ATA

./: .gitignore  CMakeLists.txt  buildAndRun.bat
include/: Enums.hpp
include/backtester/: Backtester.hpp  CapitalAllocator.hpp  FixedFractionalAllocator.hpp
include/core/: MarketData.hpp  Math.hpp  Types.hpp
include/downloader/: AlphaVantageDownloader.hpp  AlphaVantageParser.hpp  CurlHttpClient.hpp  Downloader.hpp  IHttpClient.hpp  MarketDataUpdater.hpp
include/indicators/: BasicIndicatorEngine.hpp  IndicatorEngine.hpp  IndicatorSet.hpp  Indicators.hpp  RollingVolatality.hpp
include/output/: ConsoleOutput.hpp  Output.hpp
include/portfolio/: Portfolio.hpp
include/storage/: MarketDataUpdater.hpp  SQLiteStorage.hpp  Storage.hpp
include/strategy/: CrossoverStrategy.hpp  EMA.hpp  EMACrossoverStrategy.hpp  MovingAverageCrossoverStrategy.hpp  MovingAverageStrategy.hpp  Strategy.hpp  StrategyContext.hpp  StrategyDecision.hpp
include/utils/: TimeUtils.hpp
src/: main.cpp
src/Backtester/: Backtester.cpp
src/core/: Math.cpp
src/downloader/: AlphaVantageDownloader.cpp  AlphaVantageParser.cpp  CurlHttpClient.cpp  MarketDataUpdater.cpp
src/indicators/: BasicIndicatorEngine.cpp  Indicators.cpp
src/output/: ConsoleOutput.cpp
src/portfolio/: Portfolio.cpp
src/storage/: MarketDataUpdater.cpp  SQLiteStorage.cpp
src/strategy/: CrossoverStrategy.cpp  EMACrossoverStrategy.cpp  MovingAverageCrossoverStrategy.cpp  MovingAverageStrategy.cpp
src/utils/: TimeUtils.cpp
tests/: CMakeLists.txt
tests/backtester/: TestBacktester.cpp  TestCapitalAllocator.cpp
tests/core/: TestMath.cpp
tests/downloader/: TestAlphaVantageDownloader.cpp  TestAlphaVantageParser.cpp
tests/indicators/: TestIndicators.cpp
tests/storage/: TestMarketDataUpdater.cpp  TestSQLiteStorage.cpp
tests/strategy/: TestCrossover.cpp  TestMovingAverage.cpp  TestMovingAverageCrossover.cpp
